--- a/index.html
+++ b/index.html
@@ -62,11 +62,33 @@
         </ul>
     </nav>
     <hr>
-    <h2>Header</h2>
+    <h2>@Header</h2>
     <header>
         <img src="images/Hero.svg"/>
-        <h1> Heading inside Hero</h1>
+        <h1> Heading inside Header</h1>
     </header>
+    <hr>
+
+<h2>@section</h2>
+<section>
+    <h3>white Section</h3>
+<p>This will Have white background</p>
+</section>
+<section>
+    <h3>off white Section</h3>
+<p>This will have grey background</p>
+</section>
+<hr>
+<h2>@footer</h2>
+    <div> heading inside footer</div>
+    <ul>
+        <li>social one</li>
+        <li> social Two</li>
+        <li>social three</li>
+    </ul>
+</footer>
+
+
 
 
 
