--- a/neog lesson 3/index.html
+++ b/neog lesson 3/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component libray</title>
-    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
     <h1> Rahul component Library</h1>
@@ -15,24 +14,19 @@
     <h1>This is the biggest heading</h1>
     <h2>This is second biggest</h2>
     <p>This is normal text.This is free flowing and will wrap at the end like a paragrap.</p>
-    <p>This paragraph will have <strong>bold</strong> text</p>
      <small>This is smallest text</small>
      <hr>   
     <h2>@container</h2>
-
     <h3>Fluid container</h3>
-    <div class="container-fluid">This is fluid container and it will go till the end of the page</div>
+    <div>This is fluid container and it will go till the end of the page</div>
     <h3>cenrtal container</h3>
-
-    <div class="container central-container">This is central container and it will take specified width </div>
+    <div>This is central container and it will take specified width </div>
     <hr>
     <h2>@Links</h2>
-
-    <a class="link link-primary" href="/">Primary Link</a>
-    <a class="link link-secondary" href="/">Secondary Link</a>
+    <a href="/">Primary Link</a>
+    <a href="/">Secondary Link</a>
     <hr>
     <h2>@Lists</h2>
-
     <h3>Unordered lists</h3>
     <ul>
         <li>Item One</li>
@@ -54,7 +48,6 @@
     </ol>
     <hr>
     <h2>@nav</h2>
-
     <nav>
         <div>I am Brand</div>
         <ul>
@@ -77,7 +70,6 @@
     <hr>
 
 <h2>@section</h2>
-
 <section>
     <h3>white Section</h3>
 <p>This will Have white background</p>
@@ -88,7 +80,6 @@
 </section>
 <hr>
 <h2>@footer</h2>
-
     <div> heading inside footer</div>
     <ul>
         <li>social one</li>
