--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <li> Inline item three</li>
     </ul>
     <h3>Reversed ordered Lists</h3>
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>eggs</li>
         <li>break</li>
@@ -55,10 +55,12 @@
     <hr>
     <h2>@nav</h2>
 
-    <nav>
-        <div>I am Brand</div>
-        <ul>
-            <li>
+    <nav class="navigation">
+        <div
+         class="nav-brand">I am Brand</div>
+        <ul class="list-non-bullet">
+            <li
+            class="list-item-inline">
                 <a href="/">Home</a>
                 <a href="/">Projects</a>
                 <a href="/">About Us</a>
