--- a/index.html
+++ b/index.html
@@ -53,14 +53,17 @@
         <li>break</li>
     </ol>
     <hr>
+
     <h2>@nav</h2>
 
-    <nav class="navigation">
+    <nav class="navigation container">
         <div
          class="nav-brand">I am Brand</div>
-        <ul class="list-non-bullet">
+        <ul class="list-non-bullet nav-pills">
             <li
             class="list-item-inline">
+            
+    
                 <a href="/">Home</a>
                 <a href="/">Projects</a>
                 <a href="/">About Us</a>
