--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
     </nav>
     <hr>
     <h2>@Header</h2>
-    <header>
-        <img src="images/Hero.svg"/>
-        <h1> Heading inside Header</h1>
+
+    <header class="Hero">
+        <img class="hero-img" src="images/Hero.svg"
+        <h1 class="hero-heading"> Heading inside Header</h1>
     </header>
     <hr>
 
