--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <hr>
     <h2>@Header</h2>
 
-    <header class="Hero">
-        <img class="hero-img" src="images/Hero.svg"
+    <header class="hero">
+        <img class="hero-img" src="images/hero.svg"
         <h1 class="hero-heading"> Heading inside Header</h1>
     </header>
     <hr>
