--- a/index.html
+++ b/index.html
@@ -84,12 +84,16 @@
 
 <h2>@section</h2>
 
-<section>
+<section class="section">
+
     <h3>white Section</h3>
+
 <p>This will Have white background</p>
 </section>
-<section>
+<section classs="section">
+
     <h3>off white Section</h3>
+
 <p>This will have grey background</p>
 </section>
 <hr>
