--- a/neog lesson 3/index.html
+++ b/neog lesson 3/index.html
@@ -80,11 +80,19 @@
 </section>
 <hr>
 <h2>@footer</h2>
-    <div> heading inside footer</div>
-    <ul>
-        <li>social one</li>
-        <li> social Two</li>
-        <li>social three</li>
+
+    <div
+    class="footer-header"> heading inside footer</div>
+    <ul class="social-links">
+        <li class="list-item-in-line"><a class="link' href="/">social one
+        </a>
+    </li>
+        <li class="list-item-in-line"><a class="link' href="/">social Two
+        </a>
+    </li>
+        <li class="list-item-in-line"><a class="link' href="/">social three
+        </a>
+    </li>
     </ul>
 </footer>
 
