--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <nav class="navigation container">
         <div
-         class="nav-brand"><a href="/">adarshbalika</a></div>
+         class="nav-brand"><adarshbalika</div>
         <ul class="list-non-bullet nav-pills">
             <li
          class="list-item-inline">
@@ -82,36 +82,57 @@
     <h2>@Header</h2>
 
     <header class="hero">
-        <img class="hero-img" src="images/hero.svg"
-        <h1 class="hero-heading"> Heading inside Header</h1>
+        <img class="hero-img" src="images/hero.svg"/>
+        <h1 class="hero-heading"> adarsh balika the <span class="heading-inverted">web developer</span>
+        </h1>
     </header>
     <hr>
 
-<h2>@section</h2>
+
 
 <section class="section">
-
-    <h3>white Section</h3>
-
-<p>This will Have white background</p>
+    <div class="container containter-center">
+        <h1>technologies</h1>
+        <p>
+            I like to showcase my work and thus,you can see my projects hosted online.I'm familiar with HTML5,CSS3,GIT,Javascript,NODE JS,React
+        </p>
+<a class="link link-primary" href="/projects.html">See projects</a>
+    </div>
 </section>
-<section classs="section">
+<section classs="section ow">
+    <div class="container container-center">
+        <h1>blogs</h1>
+  <p> I am also working on some technical and non-technical blogs.I like to document my journey of learning.
+        </p>
+        < a class="link link-secondary" href="/blogs.html">Read blogs</a>
+    </div>
+ 
+    
 
-    <h3>off white Section</h3>
 
-<p>This will have grey background</p>
 </section>
 <hr>
+
 <h2>@footer</h2>
 
-    <div> heading inside footer</div>
-    <ul>
-        <li>social one</li>
-        <li> social Two</li>
-        <li>social three</li>
+<footer class="footer">
+    <div class="footer-header">Some small heading inside footer</div>
+    <ul class="social-links list-non-bullet">
+    <li class="li.list-item-inline"<a class="link" href="/">social one
+
+    </a>
+</li>
+    <li class="li.list-item-inline"<a class="link" href="/">social two
+
+    </a>
+</li>
+    <li class="li.list-item-inline"<a class="link" href="/">social three
+
+    </a>
+</li>
     </ul>
 </footer>
-
+   
 
 
 
