--- a/lib/blogs.html
+++ b/lib/blogs.html
@@ -5,13 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
+    <link href="lib/blogs.html/style.css" rel="stylesheet"/>
 </head>
 <body>
     <header class="hero">
     
         <h1 class="hero-heading"> my <span class="heading-inverted">blogs</span>
         </h1>
+<h2>
+    Hello everyone, My name is Rahul Rawat.I am working in skills like html,css and making my first webpage and adding my projects and blogs into it.
+</h2>
     </header>
+    footer class="footer">
+    <div class="footer-header">Connect To Me</div>
+    <ul class="social-links list-non-bullet">
+    <li class="li.list-item-inline"<a class="link" href="/">linkedIn
+
+    </a>
+</li>
+    <li class="li.list-item-inline"<a class="link" href="/">Twitter
+
+    </a>
+</li>
+    <li class="li.list-item-inline"<a class="link" href="/">Github
+
+    </a>
+</li>
+    </ul>
+</footer>
     
 </body>
 </html>
